syntax = "proto3";
import "error.proto";
import "consts.proto";
package proto;
option go_package = "/proto";

message Item {
  ItemType key = 1;
  int32 val = 2;
}

message Profile {
  string name = 1;
  int64 userId = 2;
  repeated Item itemList = 3;
  int64 updatedAt = 10;
}

// 下发桌子信息
message TableInfo {

  // 桌子上的玩家
  message Player {
    int32 teamId = 1;
    bool end = 2;
    int32 score = 3;
    Profile profile = 4;
    int32 seatId = 5;
  }

  // 桌子等待
  message Waiter {
    map<int64, int64> readys = 1;
    int32 countDown = 2;
  }

  // 用于资源检查
  message Res {
    map<int64, int32> players = 1;
    int32 countDown = 2;
  }

  string tableId = 1;
  TableState tableState = 2;
  map<int64, Player>  players = 3;
  map<int32, int64>loseTeams = 4;
  Waiter waiter = 5;
  Res res = 6;
  Room room = 7;
  int64 randSeed = 8;
  bool hasPassword = 10;
  int32 roundId = 11;

  // 结算本局时用的
  map<int64, OnItemChange> playerItems = 9;
}

message Room {
  string roomId = 1;
  int32 pvp = 2;
  string name = 3;
  int32 minCoin = 4;
  string prefab = 5;
  RoomType type = 8;

  repeated TableInfo tableList = 6;
  int32 playerCount = 7;
}

message Action {
  ActionType key = 1;
  repeated int32 valList = 2;

  int64 to = 3;
  int64 from = 4;
}

message LoginToGame {
  int64 userId = 1;
}

message LoginToGameResp {
  ErrorCode code = 1;
  Profile profile = 2;
  string roomId = 4;
  string tableId = 5;
  int32 roundId = 6;
}

message RegisterGameReq {
  string name = 1;
  string accountId = 2;
}

message GetRoomList {

}

message GetRoomListResp {
  ErrorCode code = 1;
  repeated Room roomList = 2;
}

message GetRoomInfo {
  string roomId = 1;
}

message GetRoomInfoResp {
  ErrorCode code = 1;
  Room room = 2;
}

message CreateTable {
  string tableId = 1;
  string password = 2;
}

message CreateTableResp {
  ErrorCode code = 1;
  TableInfo table = 2;
}

message SitDown {
  string tableId = 1;
  string password = 2;
  int32 seatId = 3;
}

message SitDownResp {
  ErrorCode code = 1;
}

message StandUp {

}

message StandUpResp {
  ErrorCode code = 1;
}

message KickUser {
  int64 userId = 1;
}

message KickUserResp {
  ErrorCode code =1;
}

message Join {
  string roomId = 1;
}

message JoinResp {
  ErrorCode code = 1;
  Room roomInfo = 2;
}

message Leave {
  string roomId = 1;
}

message LeaveResp {
  ErrorCode code = 1;
}

message Ready {
}

message ReadyResp {
  ErrorCode code = 1;
}

message LoadRes {
  int32 current = 1;
}

message ResumeTable {
  int64 frameId = 1;
}

message ResumeTableResp {
  ErrorCode code = 1;
  GameStateResp state = 2;
}

// 在每一个步骤，下发游戏状态
message GameStateResp {
  ErrorCode code = 1;
  GameState state = 3;
  TableInfo tableInfo = 5;
}


message UpdateFrame {
  Action action = 1;
}

message OnFrame {
  message Player {
    int64 userId = 1;
    repeated Action actionList = 2;
  }

  int64 frameId = 1;
  int64 frameTime = 2;

  repeated Player playerList = 3;
  // 只有第一帧的时候返回500个
  repeated int32 pieceList = 4;
}

message OnFrameList {
  repeated OnFrame frameList = 1;
}

// 道具变化
message OnItemChange {
  repeated Item itemList = 1;
  string reason = 2;
  int64 to = 3;
}